KL mobile mainnav spacing fix attempt v9
Trying to patch so Safari mobilenav works properly (Chrome and Firefox currently working) v2

--- a/style.css
+++ b/style.css
@@ -4721,7 +4721,7 @@ span.highlight {
 }
 #hero-section #mobile-nav, #subpage-hero #mobile-nav {
 	position: absolute;
-	bottom: 8vh;
+	bottom: 6vh;
 	left: 0;
 	padding: 0 20px;
 	width: 100%;
